force-app/main/default/objects/Added_Product__c/fields/TPX_Combi_bruger__c.field-meta.xml
<CustomField>
    <fullName>TPX_Combi_bruger__c</fullName>
    <defaultValue>&quot;12103&quot;</defaultValue>
    <label>TPX Combi bruger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>