force-app/main/default/objects/Added_Product__c/fields/TPX_Conference__c.field-meta.xml
<CustomField>
    <fullName>TPX_Conference__c</fullName>
    <defaultValue>&quot;12215&quot;</defaultValue>
    <label>TPX Conference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>