force-app/main/default/objects/Added_Product__c/fields/TPX_Exchange_Information__c.field-meta.xml
<CustomField>
    <fullName>TPX_Exchange_Information__c</fullName>
    <defaultValue>&quot;12400&quot;</defaultValue>
    <label>TPX Exchange Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>