force-app/main/default/objects/Added_Product__c/fields/TPX_Exchange_Synchronisering__c.field-meta.xml
<CustomField>
    <fullName>TPX_Exchange_Synchronisering__c</fullName>
    <defaultValue>&quot;12401&quot;</defaultValue>
    <label>TPX Exchange Synchronisering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>