force-app/main/default/objects/Added_Product__c/fields/TPX_Fastnet_nr__c.field-meta.xml
<CustomField>
    <fullName>TPX_Fastnet_nr__c</fullName>
    <defaultValue>&quot;12216&quot;</defaultValue>
    <label>TPX Fastnet nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>