force-app/main/default/objects/Added_Product__c/fields/TPX_Fastnet_nr_Serie_100__c.field-meta.xml
<CustomField>
    <fullName>TPX_Fastnet_nr_Serie_100__c</fullName>
    <defaultValue>&quot;12218&quot;</defaultValue>
    <label>TPX Fastnet nr. Serie 100</label>
    <length>255</length>
    <type>Text</type>
</CustomField>