force-app/main/default/objects/Added_Product__c/fields/TPX_Fax_2_e_mail_Mobilnr__c.field-meta.xml
<CustomField>
    <fullName>TPX_Fax_2_e_mail_Mobilnr__c</fullName>
    <defaultValue>&quot;12221&quot;</defaultValue>
    <label>TPX Fax 2 e-mail Mobilnr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>