force-app/main/default/objects/Added_Product__c/fields/TPX_Funktionsnr_FIX__c.field-meta.xml
<CustomField>
    <fullName>TPX_Funktionsnr_FIX__c</fullName>
    <defaultValue>&quot;T12108&quot;</defaultValue>
    <label>TPX Funktionsnr (FIX)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>