force-app/main/default/objects/Added_Product__c/fields/TPX_Funktionsnr_Mobil__c.field-meta.xml
<CustomField>
    <fullName>TPX_Funktionsnr_Mobil__c</fullName>
    <defaultValue>&quot;T12109&quot;</defaultValue>
    <label>TPX Funktionsnr (Mobil)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>