force-app/main/default/objects/Added_Product__c/fields/TPX_Funktionsnr_PBX__c.field-meta.xml
<CustomField>
    <fullName>TPX_Funktionsnr_PBX__c</fullName>
    <defaultValue>&quot;12110&quot;</defaultValue>
    <label>TPX Funktionsnr (PBX)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>