force-app/main/default/objects/Added_Product__c/fields/TPX_Limited_bruger__c.field-meta.xml
<CustomField>
    <fullName>TPX_Limited_bruger__c</fullName>
    <defaultValue>&quot;12100&quot;</defaultValue>
    <label>TPX Limited bruger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>