force-app/main/default/objects/Added_Product__c/fields/TPX_Smart_Teams_bruger__c.field-meta.xml
<CustomField>
    <fullName>TPX_Smart_Teams_bruger__c</fullName>
    <defaultValue>&quot;12108&quot;</defaultValue>
    <label>TPX Smart Teams bruger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>