force-app/main/default/objects/Added_Product__c/fields/TPX_Smartphone_bruger__c.field-meta.xml
<CustomField>
    <fullName>TPX_Smartphone_bruger__c</fullName>
    <defaultValue>&quot;12102&quot;</defaultValue>
    <label>TPX Smartphone bruger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>