force-app/main/default/objects/Added_Product__c/fields/TPX_Softphone_bruger__c.field-meta.xml
<CustomField>
    <fullName>TPX_Softphone_bruger__c</fullName>
    <defaultValue>&quot;12101&quot;</defaultValue>
    <label>TPX Softphone bruger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>