force-app/main/default/objects/Added_Product__c/fields/TPX_Statistic_Avanceret__c.field-meta.xml
<CustomField>
    <fullName>TPX_Statistic_Avanceret__c</fullName>
    <defaultValue>&quot;12301&quot;</defaultValue>
    <label>TPX Statistic - Avanceret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>