force-app/main/default/objects/Added_Product__c/fields/TPX_Statistic_Basis__c.field-meta.xml
<CustomField>
    <fullName>TPX_Statistic_Basis__c</fullName>
    <defaultValue>&quot;12300&quot;</defaultValue>
    <label>TPX Statistic - Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>