force-app/main/default/objects/Added_Product__c/fields/TPX_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>TPX_Supervisor__c</fullName>
    <defaultValue>&quot;12212&quot;</defaultValue>
    <label>TPX Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>