force-app/main/default/objects/Added_Product__c/fields/TPX_Wallboard__c.field-meta.xml
<CustomField>
    <fullName>TPX_Wallboard__c</fullName>
    <defaultValue>&quot;12211&quot;</defaultValue>
    <label>TPX Wallboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>