force-app/main/default/objects/Added_Product__c/fields/X70_80_nummer_inkl_svarsted__c.field-meta.xml
<CustomField>
    <fullName>X70_80_nummer_inkl_svarsted__c</fullName>
    <defaultValue>&quot;12219&quot;</defaultValue>
    <label>70/80 nummer inkl. svarsted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>